--- a/_style/default.css
+++ b/_style/default.css
@@ -3,6 +3,7 @@ html {
   height: 100%;
   padding-top: -20px;
   width: 100%;
+  overflow-x: hidden;
 }
 body {
   background-color: var(--body_background_color);
